# mtgjson

./: .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .style.yapf  .travis.yml  CONTRIBUTING.md  Dockerfile  ENHANCED_PRICING_MODEL.md  LICENSE.txt  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  RECORDING_INSTRUCTIONS.md  TCGCSV_INTEGRATION_SUMMARY.md  WARP.md  buildSet.py  build_rust.bat  build_rust.py  comprehensive_test_framework.md  coverage.json  demo_tcgcsv_provider.py  docker-bake.hcl  find_chocobo_knights.py  gathererSets.py  mtgjson.properties  mtgjson.properties.example  mypy.ini  parity_check.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  (+5 more)
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-container.yml  docker-build.yml  tests.yml
docs/: README.md  assembly-output.md  best_practices.md  contributing.md  documentation.md  global-cache.md  models.md  pipeline-context.md  pipeline-core.md  plan  prices.md  subprocess-isolation.md  tcgcsv_provider.md
docs/tests/: http_recording
flake8-style/: pyproject.toml  style_plugin.py
mtgjson/: __main__.py
mtgjson-rust/: COMPILATION_FIXES.md  COMPILED_CLASSES_STATUS.md  Cargo.toml  IMPLEMENTATION_STATUS.md  MTGJSON_RUST_STATUS.md  RUST_TRANSFORMATION_PROGRESS.md  SET_BUILDER_CONVERSION.md
mtgjson-rust/src/: base.rs  card.rs  compiled_classes.rs  constants.rs  deck.rs  foreign_data.rs  game_formats.rs  identifiers.rs  leadership_skills.rs  legalities.rs  lib.rs  meta.rs  output_generator.rs  parallel_call.rs  price_builder.rs  prices.rs  related_cards.rs  rulings.rs  sealed_product.rs  set.rs  set_builder.rs  translations.rs  utils.rs  utils_functions.rs
mtgjson-rust/src/builders/: mod.rs  output_generator.rs  parallel_call.rs  price_builder.rs  set_builder.rs  set_builder_functions.rs
mtgjson-rust/src/classes/: base.rs  card.rs  deck.rs  foreign_data.rs  game_formats.rs  identifiers.rs  leadership_skills.rs  legalities.rs  meta.rs  mod.rs  prices.rs  purchase_urls.rs  related_cards.rs  rulings.rs  sealed_product.rs  set.rs  translations.rs  utils.rs
mtgjson-rust/src/compiled_classes/: all_identifiers.rs  all_printings.rs  atomic_cards.rs  card_types.rs  compiled_list.rs  deck_list.rs  enum_values.rs  keywords.rs  set_list.rs  structures.rs  tcgplayer_skus.rs
mtgjson-rust/src/providers/: mod.rs  provider_base.rs
mtgjson-rust/src/providers/cardmarket/: mod.rs  monolith.rs
mtgjson-rust/src/providers/edhrec/: card_ranks.rs  mod.rs
mtgjson-rust/src/providers/github/: boosters.rs  card_sealed_products.rs  decks.rs  mod.rs  mtgsqlite.rs  sealed.rs
mtgjson-rust/src/providers/mtgwiki/: mod.rs  secret_lair.rs
mtgjson-rust/src/providers/scryfall/: mod.rs  monolith.rs  orientation_detector.rs  sf_utils.rs
mtgjson-rust/tests/: comprehensive_test_framework.rs  comprehensive_testing_summary.md  test_card_comprehensive.rs  test_deck_comprehensive.rs  test_foreign_data_comprehensive.rs  test_identifiers_comprehensive.rs  test_output_generator_comprehensive.rs  test_price_builder_comprehensive.rs  test_prices_comprehensive.rs  test_sealed_product_comprehensive.rs  test_set_comprehensive.rs  test_translations_comprehensive.rs
mtgjson4/: .gitignore  .goutputstream-ZFQ0VZ  __init__.py  __main__.py  builder.py  changeHistory.json  compile_mtg.py  compile_prices.py  compressor.py  corrections.py  download.py  format.py  gatherer.py  globals.py  mtg_builder.py  mtg_corrections.py  mtg_global.py  mtg_http.py  mtg_parse.py  mtg_storage.py  mtgjson.py  mtgjson_card.py  mtgjson_https.py  outputter.py  parsing.py  requirements.txt  requirements_test.txt  scryfall.py  setup.py  shared_info.py  stacktracer.py  storage.py  tox.ini  util.py  version.json  zachTest123.py
mtgjson4/mtgjson4/: __init__.py  __main__.py  compile_mtg.py  compressor.py  mtgjson_card.py  util.py
mtgjson4/provider/: cardhoader.py  gamepedia.py  gatherer.py  magic_card_market.py  magic_precons.py  mtgstocks.py  scryfall.py  tcgplayer.py  translation_sources.py  wizards.py
mtgjson4/providers/: __init__.py  gamepedia.py  gatherer.py  scryfall.py  tcgplayer.py  wizards.py
mtgjson4/resources/: base_set_sizes.json  boosters.json  ko_set_translations.json  mkm_information.json  set_code_watermarks.json  set_translations.json  wizards_set_name_fixes.json
mtgjson41/: __init__.py  mtgjson_https.py
mtgjson4_old/: __main__.py  mtg_builder.py  mtg_http.py  mtg_parse.py  mtg_storage.py
mtgjson5/: README.md  __init__.py  __main__.py  _subprocess_assembly.py  _subprocess_exports.py  _version.py  arg_parser.py  cache.py  cache_builder.py  card_pipeline.py  categoricals.py  compress_generator.py  constants.py  consts.py  context.py  conventions.py  globals.py  model_pipeline.py  mtgjson_config.py  mtgjson_s3_handler.py  output_generator.py  output_uploader.py  parallel_call.py  pipeline.py  polars_price_builder.py  preprocess.py  price_builder.py  profiler.py  referral_builder.py  requirements.txt  retryable_session.py  sb2.py  serialize.py  set_builder.py  setup.py  singleton.py  tox.ini  types_generator.py  utils.py  uuid_generator.py
mtgjson5/classes/: __init__.py  json_object.py  mtgjson_card.py  mtgjson_card_obj.py  mtgjson_deck.py  mtgjson_deck_header.py  mtgjson_foreign_data.py  mtgjson_foreign_data_obj.py  mtgjson_game_formats.py  mtgjson_identifiers.py  mtgjson_leadership_skills.py  mtgjson_leadership_skills_obj.py  mtgjson_legalities.py  mtgjson_legalities_obj.py  mtgjson_meta.py  mtgjson_meta_obj.py  mtgjson_prices.py  mtgjson_prices_obj.py  mtgjson_prices_v2.py  mtgjson_prices_v2_container.py  mtgjson_purchase_urls.py  mtgjson_purchase_urls_obj.py  mtgjson_related_cards.py  mtgjson_rulings.py  mtgjson_rulings_obj.py  (+9 more)
scripts/: compare_manifests.py  generate_scryfall_cassette.py  parity_check.py  validate_sealed_parity.py
tests/: README.md  conftest.py  corrections_test.py  scraper_test.py
(+504 files in other folders)
