[project]
name = "mtgjson5"
version = "5.2.2"
description = "Magic: the Gathering compiled database generator"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Zach Halpern", email = "zach@mtgjson.com" },
]
urls = { Homepage = "https://mtgjson.com/" }
dependencies = [
    "beautifulsoup4==4.12.3",
    "boto3==1.40.1",
    "botocore==1.40.1",
    "gevent==25.5.1",
    "gitpython==3.1.45",
    "mergedeep==1.3.4",
    "mkmsdk==0.6.0",
    "python-dateutil==2.9.0.post0",
    "ratelimit==2.2.1",
    "requests==2.32.4",
    "requests-cache==1.2.1",
    "singleton-decorator==1.0.0",
    "urllib3==1.26.18 ; python_full_version < '3.10'",
    "urllib3==2.5.0 ; python_full_version >= '3.10'",
]

keywords = [
    "Big Data",
    "Card Games",
    "Collectible",
    "Database",
    "JSON",
    "MTG",
    "MTGJSON",
    "Trading Cards",
    "Magic: The Gathering",
]
classifiers=[
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Database",
    "Topic :: Software Development :: Version Control :: Git",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.17.1",
    "pylint==3.3.7",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "setuptools==80.9.0",
    "tox==4.28.4",
    "types-python-dateutil~=2.9.0",
    "types-pyyaml~=6.0.12",
    "types-redis~=4.6.0",
    "types-requests==2.31.0.6 ; python_full_version < '3.10'",
    "types-requests~=2.32.4 ; python_full_version >= '3.10'",
    "types-ujson~=5.10.0",
]
