[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtgjson5"
version = "5.3.0"
description = "Magic: the Gathering compiled database generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Zach Halpern", email = "zach@mtgjson.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Database",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = [
    "Big Data",
    "Card Games",
    "Collectible",
    "Database",
    "JSON",
    "MTG",
    "MTGJSON",
    "Trading Cards",
    "Magic: The Gathering",
]
dependencies = [
    "aiohttp==3.13.3",
    "beautifulsoup4==4.14.3",
    "boto3==1.42.54",
    "botocore==1.42.54",
    "gevent==25.9.1",
    "GitPython==3.1.46",
    "ijson==3.4.0.post0",
    "mergedeep==1.3.4",
    "mkmsdk==0.6.0",
    "numpy==2.4.2",
    "orjson==3.11.7",
    "polars==1.38.1",
    "polars-hash==0.5.6",
    "pydantic==2.12.5",
    "python-dateutil==2.9.0.post0",
    "ratelimit==2.2.1",
    "requests-cache==1.3.0",
    "requests==2.32.5",
    "singleton-decorator==1.0.0",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.2",
    "mypy==1.19.1",
    "pylint==4.0.5",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest-recording==0.13.4",
    "tox==4.44.0",
    "tox-uv==1.29.0",
    "vcrpy==8.1.1",
    "PyYAML==6.0.3",
    "requests-cache[yaml]==1.3.0",
    "types-PyYAML==6.0.12.20250915",
    "types-python-dateutil==2.9.0.20260124",
    "types-redis==4.6.0.20241004",
    "types-requests==2.32.4.20260107",
    "types-ujson==5.10.0.20250822",
]

[tool.uv]
environments = ["platform_python_implementation == 'CPython'"]

[tool.setuptools.packages.find]
include = ["mtgjson5*"]

[tool.setuptools.package-data]
mtgjson5 = ["resources/*"]

# --- Ruff (replaces black, isort, flake8) ---

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors (indentation, whitespace, syntax)
    "F",     # pyflakes (unused imports, undefined names, redefined variables)
    "W",     # pycodestyle warnings (whitespace, line breaks)
    "I",     # isort (import sorting)
    "UP",    # pyupgrade (modern Python syntax)
    "B",     # flake8-bugbear (common bugs, mutable default args)
    "SIM",   # flake8-simplify (unnecessary complexity)
    "C4",    # flake8-comprehensions (optimize comprehensions)
    "RUF",   # ruff-specific rules (unused noqa, mutable class defaults)
    "PIE",   # flake8-pie (unnecessary pass, duplicate fields)
    "T20",   # flake8-print (no print() in production code)
    "PT",    # flake8-pytest-style (pytest best practices)
    "PERF",  # perflint (performance anti-patterns)
    "TCH",   # flake8-type-checking (TYPE_CHECKING imports)
    "N",     # pep8-naming (naming conventions)
]
ignore = [
    "E402",    # module level import not at top of file
    "E501",    # line too long (ruff format handles wrappable code; this only catches long strings/comments)
    "E712",    # allow == False comparisons (needed for Polars expressions)
    "N815",    # mixedCase variables (Pydantic model fields like setCode are intentional)
    "RUF001",  # ambiguous unicode characters (MTG card symbols are intentional)
    "RUF012",  # mutable class variable without ClassVar (Pydantic models handle this)
    "B008",    # function call in default args (singletons are intentional)
    "B024",    # abstract class without abstract methods (base class pattern)
    "PERF401", # use list comprehension (often less readable for complex appends)
    "SIM108",  # use ternary operator (often less readable)
    "SIM115",  # use context manager for open (can't always apply across branches)
    "TC001",   # move import into TYPE_CHECKING (can break runtime)
    "TC002",   # move third-party import into TYPE_CHECKING
    "TC003",   # move stdlib import into TYPE_CHECKING
    "TC004",   # move import out of TYPE_CHECKING (false positives)
    "TC010",   # move typing import into TYPE_CHECKING
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused (re-exports in __init__ are intentional)

# --- mypy ---

[tool.mypy]
python_version = "3.11"
exclude = "(cache|pipeline)\\.py$"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_subclassing_any = true
follow_imports = "normal"
incremental = true
ignore_missing_imports = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "pkg.generated_code.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "concurrent.futures"
ignore_errors = true

[[tool.mypy.overrides]]
module = "mtgjson5.models.submodels"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "mtgjson5.models.utils"
disable_error_code = ["union-attr", "operator", "arg-type"]

[[tool.mypy.overrides]]
module = "mtgjson5.models.sealed"
disable_error_code = ["typeddict-item", "no-any-return"]

# --- pytest ---

[tool.pytest.ini_options]
# -q (quiet mode): reduces output verbosity to show only test results, keeping CI logs clean
addopts = "-q"
# VCR cassette recording modes:
# - Local development: use --record-mode=once to record new cassettes
# - CI/offline: use --record-mode=none to ensure no network access (enforced in tox config)
# The vcr_config fixture in tests/conftest.py also enforces 'none' mode when MTGJSON_OFFLINE_MODE is set

# --- pylint ---

[tool.pylint.master]
persistent = true
extension-pkg-allow-list = ["orjson", "numpy", "aiohttp"]

[tool.pylint."messages control"]
disable = [
    "broad-except",
    "cyclic-import",
    "duplicate-code",
    "global-statement",
    "import-outside-toplevel",
    "invalid-name",
    "line-too-long",
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "no-else-return",
    "no-name-in-module",
    "protected-access",
    "redefined-builtin",
    "redefined-outer-name",
    "singleton-comparison",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "unspecified-encoding",
    "unsubscriptable-object",
    "unused-argument",
    "used-before-assignment",
    "wrong-import-order",
    "wrong-import-position",
    "too-many-positional-arguments",
    "unidiomatic-typecheck",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.basic]
good-names = ["f", "i", "j", "k", "_"]
no-docstring-rgx = "__.*__|test_.*"

[tool.pylint.miscellaneous]
notes = ["FIXME", "TODO"]

[tool.pylint.variables]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)"

# --- tox ---

[tool.tox]
env_list = ["format-check", "lint", "mypy", "unit"]  # default (CI)
labels = { dev = ["format", "lint", "mypy", "unit"] }  # local development

[tool.tox.env_run_base]
set_env = { PYTHONPATH = "{toxinidir}" }
extras = ["dev"]

[tool.tox.env.format]
description = "Format code and sort imports (auto-fix)"
commands = [["ruff", "format", "mtgjson5/"], ["ruff", "check", "--fix", "--select", "I", "mtgjson5/"]]

[tool.tox.env.format-check]
description = "Check formatting and import sorting (fails if unformatted)"
commands = [["ruff", "format", "--check", "mtgjson5/"], ["ruff", "check", "--select", "I", "mtgjson5/"]]

[tool.tox.env.mypy]
description = "mypy static type checking only"
commands = [["mypy", "{posargs:mtgjson5/}"]]

[tool.tox.env.lint]
description = "Run linting tools"
commands = [["ruff", "check", "mtgjson5/"], ["pylint", "mtgjson5/"]]

[tool.tox.env.unit]
description = "Run unit tests with coverage and mypy type checking"
set_env = { PYTHONPATH = "{toxinidir}", MTGJSON_OFFLINE_MODE = "1" }
commands = [["pytest", "tests/", "--record-mode=none"]]
