[package]
name = "mtgjson-rust"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of MTGJSON data structures with Python bindings"
license = "MIT"

[lib]
name = "mtgjson_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "experimental-async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
rustc-hash = "1.1"
smallvec = "1.10"
rayon = "1.7"
async-trait = "0.1"
once_cell = "1.19"
num_cpus = "1.16"
thiserror = "1.0"

# Fast collections
ahash = "0.8"
# Indexed maps
indexmap = { version = "2.0", features = ["serde"] }

# Additional dependencies for providers
scraper = "0.20"
config = "0.14"

[dev-dependencies]
anyhow = "1.0"

[features]
default = []
extension-module = ["pyo3/extension-module"]